--- a/profile.html
+++ b/profile.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="styles.css" />
     <title>Quiz Profile</title>
   </head>
@@ -30,7 +31,30 @@
           et ea rebum.
         </p>
       </section>
+
+      <section class="stats">
+        <div class="stats__border">
+            <svg class="stats__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><path d="M12 17h.01"/></svg>
+            <p>12</p>
+        </div>
+        <div class="stats__border">
+            <svg class="stats__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z"/></svg>
+            <p>4</p>
+        </div>
+      </section>
+
+      <section class="modals">
+        <a class="modals__settings" href="#">Settings</a>
+        <div class="modals__darkmode">
+            <p>Dark Mode</p>
+            <label class="modals__switch">
+                <input type="checkbox">
+                <span class="modals__slider"></span>
+            </label>
+        </div>
+      </section>
     </main>
+
     <footer class="footer">
       <a class="footer__link" href="index.html">
         <svg
