--- a/index.html
+++ b/index.html
@@ -3,50 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="global.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/card.css" />
+    <script src="js/index.js" defer></script>
     <title>Quiz Homepage</title>
   </head>
   <body>
     <header class="header">Quiz App</header>
-    <main>
-      <section class="card">
+    <main class="content">
+      <div class="card">
         <svg
-          class="card__icon"
+          class="card__bookmark"
+          data-js="bookmark"
           viewBox="0 0 24 24"
-          fill="black"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
-        >
-          <path d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z" />
-        </svg>
-        <div class="card__center">
-          <p class="card__titles">Question:</p>
-          <p class="card__question">
-            What is the name of the technology that allows devices to connect to
-            the internet without the need for physical cables?
-          </p>
-          <p class="card__titles">Answer:</p>
-          <button class="card__button--show">Show Answer</button>
-        </div>
-        <div class="card__left">
-          <a class="card__tag">html</a>
-          <a class="card__tag">css</a>
-          <a class="card__tag">js</a>
-        </div>
-      </section>
-
-      <section class="card">
-        <svg
-          class="card__icon"
-          viewBox="0 0 24 24"
           fill="white"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
         >
           <path d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z" />
         </svg>
@@ -57,17 +31,56 @@
             the internet without the need for physical cables?
           </p>
           <p class="card__titles">Answer:</p>
-          <button class="card__button--show">Show Answer</button>
+          <button class="card__button" data-js="show-answer">
+            Show Answer
+          </button>
+          <p class="card__answer" data-js="answer" hidden>
+            Wi-Fi (Wireless Fidelity)
+          </p>
         </div>
         <div class="card__left">
           <a class="card__tag">html</a>
           <a class="card__tag">css</a>
           <a class="card__tag">js</a>
         </div>
-      </section>
+      </div>
+
+      <div class="card">
+        <svg
+          class="card__bookmark"
+          data-js="bookmark"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          fill="white"
+        >
+          <path d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z" />
+        </svg>
+        <div class="card__center">
+          <p class="card__titles">Question:</p>
+          <p class="card__question">
+            What is the name of the technology that allows devices to connect to
+            the internet without the need for physical cables?
+          </p>
+          <p class="card__titles">Answer:</p>
+          <button class="card__button" data-js="show-answer">
+            Show Answer
+          </button>
+          <p class="card__answer" data-js="answer" hidden>
+            Wi-Fi (Wireless Fidelity)
+          </p>
+        </div>
+        <div class="card__left">
+          <a class="card__tag">html</a>
+          <a class="card__tag">css</a>
+          <a class="card__tag">js</a>
+        </div>
+      </div>
     </main>
     <footer class="footer">
-      <a class="footer__link" href="index.html">
+      <a class="footer__link footer__current" href="index.html">
         <svg
           class="footer__icon"
           viewBox="0 0 24 24"
@@ -90,6 +103,18 @@
           stroke-linejoin="round"
         >
           <path d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z" />
+        </svg>
+      </a>
+      <a class="footer__link" href="form.html">
+        <svg
+          class="footer__icon"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path d="M5 12h14" />
+          <path d="M12 5v14" />
         </svg>
       </a>
       <a class="footer__link" href="profile.html">
