--- a/profile.html
+++ b/profile.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="global.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/profile.css" />
+    <script src="js/index.js" defer></script>
     <title>Quiz Profile</title>
   </head>
   <body>
@@ -34,23 +35,49 @@
 
       <section class="stats">
         <div class="stats__border">
-            <svg class="stats__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><path d="M12 17h.01"/></svg>
-            <p>12</p>
+          <svg
+            class="stats__icon"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <circle cx="12" cy="12" r="10" />
+            <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3" />
+            <path d="M12 17h.01" />
+          </svg>
+          <p>12</p>
         </div>
         <div class="stats__border">
-            <svg class="stats__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z"/></svg>
-            <p>4</p>
+          <svg
+            class="stats__icon"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z" />
+          </svg>
+          <p>4</p>
         </div>
       </section>
 
       <section class="modals">
         <a class="modals__settings" href="#">Settings</a>
         <div class="modals__darkmode">
-            <p>Dark Mode</p>
-            <label class="modals__switch">
-                <input type="checkbox">
-                <span class="modals__slider"></span>
-            </label>
+          <p>Dark Mode</p>
+          <label class="modals__switch">
+            <input type="checkbox" />
+            <span class="modals__slider"></span>
+          </label>
         </div>
       </section>
     </main>
@@ -81,7 +108,19 @@
           <path d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z" />
         </svg>
       </a>
-      <a class="footer__link" href="profile.html">
+      <a class="footer__link" href="form.html">
+        <svg
+        class="footer__icon"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path d="M5 12h14" />
+          <path d="M12 5v14" />
+        </svg>
+      </a>
+      <a class="footer__link footer__current" href="profile.html">
         <svg
           class="footer__icon"
           viewBox="0 0 24 24"
