added character counter

--- a/form.html
+++ b/form.html
@@ -18,18 +18,20 @@
           <label class="create__titles">Your Question:</label>
           <textarea
             class="create__textfield"
+            data-js="q-textarea"
             maxlength="120"
             name="question"
           ></textarea>
-          <p class="create__characterlimit">120 <span>Characters left</span></p>
+          <p class="create__characterlimit" data-js="q-characters">120 <span>Characters left</span></p>
 
           <label class="create__titles">Your Answer:</label>
           <textarea
             class="create__textfield"
+            data-js="a-textarea"
             maxlength="120"
             name="answer"
           ></textarea>
-          <p class="create__characterlimit">120 <span>Characters left</span></p>
+          <p class="create__characterlimit" data-js="a-characters">120 <span>Characters left</span></p>
 
           <label class="create__titles">Tag:</label>
           <input type="text" class="create__textinput" name="tag" />
