attempt at making darkmode

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -15,8 +15,8 @@
       <div class="card">
         <svg
           class="card__bookmark"
+          data-js="bookmarked"
           viewBox="0 0 24 24"
-          fill="black"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
@@ -43,9 +43,8 @@
       <div class="card">
         <svg
           class="card__bookmark"
-          data-js="bookmark"
+          data-js="bookmarked"
           viewBox="0 0 24 24"
-          fill="black"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
