--- a/profile.html
+++ b/profile.html
@@ -75,7 +75,7 @@
         <div class="modals__darkmode">
           <p>Dark Mode</p>
           <label class="modals__switch">
-            <input type="checkbox" />
+            <input type="checkbox" data-js="darkmode-toggle" />
             <span class="modals__slider"></span>
           </label>
         </div>
@@ -110,7 +110,7 @@
       </a>
       <a class="footer__link" href="form.html">
         <svg
-        class="footer__icon"
+          class="footer__icon"
           viewBox="0 0 24 24"
           stroke-width="2"
           stroke-linecap="round"
